--- a/database/orator.yml
+++ b/database/orator.yml
@@ -1,5 +1,4 @@
 databases:
     sqlite:
         driver: sqlite
-        database: /sw/apps2/qualibrate/database/development.sqlite
-        
+        database: ./database/development.sqlite
