Refactoring of shovel tasks for lint and data extraction

--- a/database/orator_development.yml
+++ b/database/orator_development.yml
@@ -1,5 +1,6 @@
 databases:
-  default: sqlite  
+  default: sqlite
   sqlite:
       driver: sqlite
       database: ./database/development.sqlite
+      log_queries: True
