Addition of files migrations

--- a/database/orator_development.yml
+++ b/database/orator_development.yml
@@ -3,4 +3,4 @@ databases:
   sqlite:
       driver: sqlite
       database: ./database/development.sqlite
-      log_queries: False
+      log_queries: True
